infrastructure/configs/flux-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-operator-ui
  namespace: flux-system
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: flux-operator
    app.kubernetes.io/instance: flux-operator
  ports:
    - name: http-web
      port: 9080
      targetPort: 9080
