infrastructure/configs/ingress-openbao.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbao-ui
  namespace: openbao
spec:
  ingressClassName: traefik
  rules:
    - host: openbao.prod1.fmgb.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbao-ui
                port:
                  number: 8200
