infrastructure/configs/ingress-routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-ui
  namespace: flux-system
spec:
  ingressClassName: traefik
  rules:
    - host: fluxui.prod1.fmgb.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flux-operator-ui
                port:
                  number: 9080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-mcp
  namespace: flux-system
spec:
  ingressClassName: traefik
  rules:
    - host: mcp.prod1.fmgb.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flux-operator-mcp
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbao-ui
  namespace: openbao
spec:
  ingressClassName: traefik
  rules:
    - host: openbao.prod1.fmgb.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbao-ui
                port:
                  number: 8200
